# worfin_strategies

./: .env.live  .env.research  .gitignore  .pre-commit-config.yaml  CLAUDE.md  FX_Strategy_Universe.md  Makefile  README.md  WorFIn_Pivot_Memo.md  config.py  db_analysis.md  dev-requirements.txt  main.py  pyproject.toml  requirements.txt
.claude/: architecture.md  context.md  conventions.md
.github/workflows/: ci.yaml
Docker/: docker-compose.yaml
alembic/: alembic.ini  env.py
alembic/versions/: 001_schema.py  002_pnl_accounting.py  003_fx_rates.py  004_widen_risk_breach_numeric.py
configs/: alerts.yml  alertsmanager.yml  clickhouse.xml  users.xml
configs/grafana/provisioning/datasources/: datasource.yml
configs/prometheus/: prometheus.yml
diary/: example.md  template.md
docker/: Dockerfile  docker-compose.yaml
docs/strategies/: strategy_templates.md
scripts/: alt_load_data.py  clickhouse_schema.sql  fetch_historical.py  init_db.sql  load_synthetic_data.py  load_to_db.py  run_backtest.py  run_paper_trading.py  setup_db.py  smoke_test_ibkr.py  start_ib_gateway.sh  validate_env.py
sql/: init_clickhouse.sql  init_timescaledb.sql
src/: .env.example  __init__.py  logging.py
src/config/: config.py
src/core/: __init__.py  config.py
src/data/: __init__.py
src/data/providers/: __init__.py  base.py  interactive_brokers.py  pipeline.py  polygon.py
src/database/: database_manager.py  unified.py
src/database/models/: __init__.py
src/datafeeds/: __init__.py  base.py  interactive_brokers.py  pipeline.py  polygon_client.py
src/datafeeds/crypto/: __init__.py  binance.py  coinbase.py
src/utils/: database_management_utils.py
src/worfin/backtest/: CLAUDE.md  charts.py  costs.py  engine.py  metrics.py  pretrade_integration.py  pretrade_intergation.py
src/worfin/config/: CLAUDE.md  calendar.py  logging_config.py  metals.py  scheduler.py  settings.py
src/worfin/data/: CLAUDE.md
src/worfin/data/ingestion/: fred.py  fx_rates.py  nasdaq_datalink.py
src/worfin/data/pipeline/: carry.py  continuous.py  volatility.py
src/worfin/execution/: CLAUDE.md  engine.py  orders.py  pretrade_checks.py
src/worfin/execution/broker/: __init__.py  ibkr.py
src/worfin/infrastructure/: CLAUDE.md
src/worfin/monitoring/: CLAUDE.md  alerts.py
src/worfin/risk/: CLAUDE.md  circuit_breakers.py  limits.py  sizing.py
src/worfin/strategies/: CLAUDE.md  base.py  s1_carry.py  s4_basis_momentum.py
tests/: conftest.py
tests/test_data/: test_carry_pipeline.py  test_step1.py
tests/test_execution/: test_engine.py  test_ibkr.py  test_orders.py
tests/test_risk/: test_circuit_breaker.py  test_sizing.py
tests/test_scripts/: test_run_paper_trading.py
tests/test_strategies/: test_s1_carry.py  test_s4_basis_momentum.py
